--- a/views/discourse.html
+++ b/views/discourse.html
@@ -9,7 +9,7 @@
     </ul>
 </p>
 <h2>Environmental Ethics and Behavior Deriving from Writings of `Abdul-Bah&aacute;</h2>
-<p>This presentation highlights quotations related to themes of intersectionality; interdependence; kindness to animals; 
+<p>This presentation highlights quotations related to themes of intersectionality; interdependence; kindness to animals;
     eating meat; clean air; burial; cultivation of the Earth; and implications of these for ethics and behavior.
 </p>
 <ul>
@@ -19,8 +19,8 @@
 <h2>Faithful Call to #ActOnClimate Change</h2>
 <p>Celebrating the Papal encyclical <a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Laudato
         Si
-    </a>&nbsp;with a presentation for the <a href="http://irvingbahai.org" target="_blank">Bah&aacute;&#39;&iacute;s of Irving</a>
-    and <a href="http://www.dallasinterfaith.org" target="_blank">Dallas Interfaith Power and Light</a>. Addresses common
+    </a>&nbsp;with a presentation for the <a href="https://www.irvingbahai.org" target="_blank">Bah&aacute;&#39;&iacute;s of Irving</a>
+    and Dallas Interfaith Power and Light. Addresses common
     themes from various religious responses to climate change; call to action; prevention; awareness and advocacy; and individual
     action to show support for international action.</p>
 <ul>
@@ -29,11 +29,9 @@
     <li> <a href="http://www.slideshare.net/StephenFuqua/faithful-call-to-act-onclimate" target="_blank">SlideShare</a> </li>
 </ul>
 <h2>Moral Imperatives for Climate Action from a Bah&aacute;&#39;&iacute; Perspective</h2>
-<p>A presentation originally dedicated to the <a href="http://www.preachin.org" target="_blank">National Preach-in on Climate
-        Change
-    </a>(2014).</p>
+<p>A presentation originally dedicated to the National Preach-in on Climate Change (2014).</p>
 <ul>
-    <li>Version 3: <a href="http://www.slideshare.net/StephenFuqua/moral-imperatives-for-climate-action-from-a-bahai-perspective-v3"
+    <li>Version 3: <a href="https://www.slideshare.net/StephenFuqua/moral-imperatives-for-climate-action-from-a-bahai-perspective-v3"
             target="_blank">Slideshare</a>, <a href="files/MoralImperativeBahaiPerspective_v3.pdf" class="inline">PDF</a>, <a
             href="files/MoralImperativeBahaiPerspective_v3.pptx">PowerPoint</a>(Oct 2014, Arlington)</li>
     <li>Version 2: <a href="files/MoralImperativeBahaiPerspective_v2.pdf" class="inline">PDF</a>(May 2014, Lewisville)</li>
@@ -41,13 +39,8 @@
     <li> <a href="/#/sources" class="inline">Works cited</a> </li>
     <li> <a href="files/NineIdeasActions_GreenBahaiCom_1Page.pdf" class="inline">"Nine Ways..."</a>as a single page handout
         (PDF)</li>
-    <li> <a href="http://www.ctenergyeducation.com/lesson.htm?id=fqe4v3ol" target="_blank">Ecological Footprint Calculator
-            handout</a>(requires registration)
-    </li>
-    <li>Another <a href="http://myfootprint.org/en/visitor_information/" target="_blank">ecological footprint calculator</a>,
-        this one online</li>
 </ul>
 <h2>Eco-spiritual Integration: Three Texts</h2>
-<p> <a href="http://www.safnet.com/archives/2015/01/eco-spiritual-integration-three-texts-1.html">Eco-spiritual Integration:
+<p> <a href="https://blog.safnet.com/archive/2015/01/04/eco-spiritual_integration_three_texts_1/">Eco-spiritual Integration:
         Three Texts</a> is an essay on fragmented lifestyles in relation to environmental awareness, with reflection on three
     passages from the Bah&aacute;&#39;&iacute; writings. </p>
