Links and formatting

--- a/views/ideas.html
+++ b/views/ideas.html
@@ -1,1 +1,23 @@
-<h2>Nine ideas to engage Bah&aacute;&#39;&iacute; communities in environmental learning &amp; action</h2> <ol> <li> Deepen on the guidance from the Writings and Institutions regarding the importance of environmental sustainability and consult on actions to take as individuals, families, and as a community. </li> <li> Encourage junior youth groups and/or study circles to conduct a service project centered on supporting a healthy environment (ex. An electronics recycling drive, neighborhood litter pick-up). </li> <li> Hold a devotional focused on the environment. Consider holding the devotion in a beautiful outdoor space. </li> <li> Consider offering a space on your center property that a children&#39;s class, junior youth group, etc. can use as a community garden or plant as a pollinator garden. </li> <li> Host a workshop where community members can calculate their carbon footprint and consult with one another about some ways to &ldquo;live greener&rdquo; that demonstrate Bah&aacute;&#39;&iacute; principles of moderation, justice, and reverence for creation. </li> <li> Integrate art and music projects that celebrate the environment into study circles, junior youth groups, and devotions. For example, make musical instruments out of recycled items, or do leaf rubbing art with children. </li> <li> Incorporate Bah&aacute;&#39;&iacute; perspectives on the importance of the environment when teaching. </li> <li> Find opportunities for children and junior youth to get out and experience natural areas. Love of nature begins at an early age, and time spent in nature benefits people of all ages, from lowering blood pressure and reducing stress to improving focus in children. </li> <li> Encourage community members to engage with other faith groups in building a healthy environment. Groups such as Interfaith Power and Light bring together people of multiple faiths in creation stewardship. </li> </ol> <p style="text-align: center"><a href="files/NineIdeasActions_GreenBahaiCom.pdf">Download as a PDF</a></p>
+<h2>Nine ideas to engage Bah&aacute;&#39;&iacute; communities in environmental learning &amp; action</h2>
+<ol>
+    <li> Deepen on the guidance from the Writings and Institutions regarding the importance of environmental
+        sustainability and consult on actions to take as individuals, families, and as a community. </li>
+    <li> Encourage junior youth groups and/or study circles to conduct a service project centered on supporting a
+        healthy environment (ex. An electronics recycling drive, neighborhood litter pick-up). </li>
+    <li> Hold a devotional focused on the environment. Consider holding the devotion in a beautiful outdoor space. </li>
+    <li> Consider offering a space on your center property that a children&#39;s class, junior youth group, etc. can use
+        as a community garden or plant as a pollinator garden. </li>
+    <li> Host a workshop where community members can calculate their carbon footprint and consult with one another about
+        some ways to &ldquo;live greener&rdquo; that demonstrate Bah&aacute;&#39;&iacute; principles of moderation,
+        justice, and reverence for creation. </li>
+    <li> Integrate art and music projects that celebrate the environment into study circles, junior youth groups, and
+        devotions. For example, make musical instruments out of recycled items, or do leaf rubbing art with children.
+    </li>
+    <li> Incorporate Bah&aacute;&#39;&iacute; perspectives on the importance of the environment when teaching. </li>
+    <li> Find opportunities for children and junior youth to get out and experience natural areas. Love of nature begins
+        at an early age, and time spent in nature benefits people of all ages, from lowering blood pressure and reducing
+        stress to improving focus in children. </li>
+    <li> Encourage community members to engage with other faith groups in building a healthy environment. Groups such as
+        Interfaith Power and Light bring together people of multiple faiths in creation stewardship. </li>
+</ol>
+<p style="text-align: center"><a href="files/NineIdeasActions_GreenBahaiCom.pdf">Download as a PDF</a></p>
