--- a/views/practices.html
+++ b/views/practices.html
@@ -1,1 +1,24 @@
-<h2>Nine practices demonstrating good stewardship of our resources &amp; environment</h2> <ol> <li> Replace incandescent bulbs with compact fluorescent bulbs or LED lights. Compact fluorescent bulbs have a longer life and use only a quarter of the energy of a standard incandescent. LED lights are even more efficient than compact fluorescents. </li> <li> Post reminder signs by light switches or doors asking that lights be turned off when a room is not in use, or install in-expensive motion sensors in place of traditional switches. </li> <li> Clean and replace filters for cooling and heating systems to keep them running efficiently. </li> <li> Install a programmable thermostat to maximize efficient use of heating and cooling. When used correctly, programmable thermostats can reduce energy use and costs during times when buildings are unoccupied. </li> <li> Install water-efficient faucet heads in kitchen and bathroom sinks. Low-flow aerators can significantly reduce water use while maintaining water pressure. </li> <li> Save water and celebrate your &ldquo;local roots&rdquo; by landscaping with native plants that are adapted to local conditions. Native plants are a vital part of diverse ecosystems and can support native butterflies and birds. </li> <li> Check doors and windows for drafts and replace worn weather stripping. Preventing drafts helps with energy efficiency and reduces heating and cooling costs. </li> <li> Eliminate the use of Styrofoam plates and cups and use reusable cups, plates, and utensils wherever possible. Styrofoam (made of polystyrene) takes 500 years to decompose and is the primary source of solid pollution in our rivers and oceans. It takes 8 gallons of water to manufacture a single paper plate; by contrast, a dishwasher-sized load of dishes can be cleaned using 6-10 gallons of water. </li> <li> Recycle whatever your home community will take: paper, aluminum cans, plastic containers, etc. </li> </ol> <p style="text-align: center"><a href="files/NineIdeasActions_GreenBahaiCom.pdf">Download as a PDF</a></p>
+<h2>Nine practices demonstrating good stewardship of our resources &amp; environment</h2>
+<ol>
+    <li> Replace incandescent bulbs with compact fluorescent bulbs or LED lights. Compact fluorescent bulbs have a
+        longer life and use only a quarter of the energy of a standard incandescent. LED lights are even more efficient
+        than compact fluorescents. </li>
+    <li> Post reminder signs by light switches or doors asking that lights be turned off when a room is not in use, or
+        install in-expensive motion sensors in place of traditional switches. </li>
+    <li> Clean and replace filters for cooling and heating systems to keep them running efficiently. </li>
+    <li> Install a programmable thermostat to maximize efficient use of heating and cooling. When used correctly,
+        programmable thermostats can reduce energy use and costs during times when buildings are unoccupied. </li>
+    <li> Install water-efficient faucet heads in kitchen and bathroom sinks. Low-flow aerators can significantly reduce
+        water use while maintaining water pressure. </li>
+    <li> Save water and celebrate your &ldquo;local roots&rdquo; by landscaping with native plants that are adapted to
+        local conditions. Native plants are a vital part of diverse ecosystems and can support native butterflies and
+        birds. </li>
+    <li> Check doors and windows for drafts and replace worn weather stripping. Preventing drafts helps with energy
+        efficiency and reduces heating and cooling costs. </li>
+    <li> Eliminate the use of Styrofoam plates and cups and use reusable cups, plates, and utensils wherever possible.
+        Styrofoam (made of polystyrene) takes 500 years to decompose and is the primary source of solid pollution in our
+        rivers and oceans. It takes 8 gallons of water to manufacture a single paper plate; by contrast, a
+        dishwasher-sized load of dishes can be cleaned using 6-10 gallons of water. </li>
+    <li> Recycle whatever your home community will take: paper, aluminum cans, plastic containers, etc. </li>
+</ol>
+<p style="text-align: center"><a href="files/NineIdeasActions_GreenBahaiCom.pdf">Download as a PDF</a></p>
