--- a/views/resources.html
+++ b/views/resources.html
@@ -1,5 +1,5 @@
 ﻿<h2>
-Formal Statements from Bah&aacute;&#39;&iacute; Institutions
+    Formal Statements from Bah&aacute;&#39;&iacute; Institutions
 </h2>
 <dl>
     <dt>
@@ -8,78 +8,116 @@ Formal Statements from Bah&aacute;&#39;&iacute; Institutions
     <dd>
         <a href="https://www.bahai.org/library/authoritative-texts/the-universal-house-of-justice/messages/20171129_001/1#665166280"
             target="_blank">29 November 2017 to three individuals</a>, on behalf of the Universal House of Justice. The
-        entire letter is about climate change and Bah&aacute;&#39;&iacute; responses thereto. <br><br>"... Humanity would be best
-        and most effectively served by setting aside partisan disputation, pursuing united action that is informed by the
+        entire letter is about climate change and Bah&aacute;&#39;&iacute; responses thereto. <br><br>"... Humanity
+        would be best
+        and most effectively served by setting aside partisan disputation, pursuing united action that is informed by
+        the
         best available scientific evidence and grounded in spiritual principles, and thoughtfully revising action in the
-        light of experience. ... One of the most pressing problems of humanity in the current century is how a growing, rapidly
-        developing, and not yet united global population can, in a just manner, live in harmony with the planet and its finite
-        resources. Certain biological realities present themselves when an organism negatively affects or exceeds the capacity
-        of its ecosystem. The limited availability and inequitable distribution of resources profoundly impact social relations
-        within and between nations in many ways, even to the point of precipitating upheaval and war. And particular arrangements
-        of human affairs can have devastating consequences for the environment. The question of the impact of climate change,
-        and to what extent it is man-made and its effects can be ameliorated, is today a major aspect of this larger problem.
-        The Revelation of Bahá’u’lláh directly and indirectly touches on a range of such concerns in a manner that speaks
-        to a harmony between society and the natural world. It is essential, therefore, that Bahá’ís contribute to thought
+        light of experience. ... One of the most pressing problems of humanity in the current century is how a growing,
+        rapidly
+        developing, and not yet united global population can, in a just manner, live in harmony with the planet and its
+        finite
+        resources. Certain biological realities present themselves when an organism negatively affects or exceeds the
+        capacity
+        of its ecosystem. The limited availability and inequitable distribution of resources profoundly impact social
+        relations
+        within and between nations in many ways, even to the point of precipitating upheaval and war. And particular
+        arrangements
+        of human affairs can have devastating consequences for the environment. The question of the impact of climate
+        change,
+        and to what extent it is man-made and its effects can be ameliorated, is today a major aspect of this larger
+        problem.
+        The Revelation of Bah&aacute;&apos;u&apos;ll&aacute;h directly and indirectly touches on a range of such concerns in a manner that
+        speaks
+        to a harmony between society and the natural world. It is essential, therefore, that Bah&aacute;&apos;ís contribute to
+        thought
         and action regarding such matters."
     </dd>
     <dd>
-        <a href="" target="_blank">1 March 2017 Letter to the Bah&aacute;&#39;&iacute;s of World</a> - on economics principally,
-        see &para;2 specifically:<br><br> "The welfare of any segment of humanity is inextricably bound up with the welfare
-        of the whole. Humanity’s collective life suffers when any one group thinks of its own well-being in isolation from
-        that of its neighbours or pursues economic gain without regard for how the natural environment, which provides sustenance
-        for all, is affected. A stubborn obstruction, then, stands in the way of meaningful social progress: time and again,
-        avarice and self-interest prevail at the expense of the common good. Unconscionable quantities of wealth are being
-        amassed, and the instability this creates is made worse by how income and opportunity are spread so unevenly both
-        between nations and within nations. But it need not be so. However much such conditions are the outcome of history,
-        they do not have to define the future, and even if current approaches to economic life satisfied humanity’s stage
-        of adolescence, they are certainly inadequate for its dawning age of maturity. There is no justification for continuing
-        to perpetuate structures, rules, and systems that manifestly fail to serve the interests of all peoples. The teachings
-        of the Faith leave no room for doubt: there is an inherent moral dimension to the generation, distribution, and utilization
+        <a href="" target="_blank">1 March 2017 Letter to the Bah&aacute;&#39;&iacute;s of World</a> - on economics
+        principally,
+        see &para;2 specifically:<br><br> "The welfare of any segment of humanity is inextricably bound up with the
+        welfare
+        of the whole. Humanity&apos;s collective life suffers when any one group thinks of its own well-being in isolation
+        from
+        that of its neighbours or pursues economic gain without regard for how the natural environment, which provides
+        sustenance
+        for all, is affected. A stubborn obstruction, then, stands in the way of meaningful social progress: time and
+        again,
+        avarice and self-interest prevail at the expense of the common good. Unconscionable quantities of wealth are
+        being
+        amassed, and the instability this creates is made worse by how income and opportunity are spread so unevenly
+        both
+        between nations and within nations. But it need not be so. However much such conditions are the outcome of
+        history,
+        they do not have to define the future, and even if current approaches to economic life satisfied humanity&apos;s
+        stage
+        of adolescence, they are certainly inadequate for its dawning age of maturity. There is no justification for
+        continuing
+        to perpetuate structures, rules, and systems that manifestly fail to serve the interests of all peoples. The
+        teachings
+        of the Faith leave no room for doubt: there is an inherent moral dimension to the generation, distribution, and
+        utilization
         of wealth and resources.""
     </dd>
     <dd>
-        <a href="http://universalhouseofjustice.bahai.org/involvement-life-society/20130302_001" target="_blank">2 March
+        <a href="https://universalhouseofjustice.bahai.org/involvement-life-society/20130302_001" target="_blank">2
+            March
             2013 Letter to the Bah&aacute;&#39;&iacute;s of Iran</a>
         - particularly this portion of &para;6:<br><br> "For the principle of the oneness of humankind, as proclaimed by
-        Bah&aacute;&#39;u&#39;ll&aacute;h, asks not merely for cooperation among people and nations. It calls for a complete
-        reconceptualization of the relationships that sustain society. The deepening environmental crisis, driven by a system
-        that condones the pillage of natural resources to satisfy an insatiable thirst for more, suggests how entirely inadequate
-        is the present conception of humanity's relationship with nature &hellip; The principle of the oneness of humankind
+        Bah&aacute;&#39;u&#39;ll&aacute;h, asks not merely for cooperation among people and nations. It calls for a
+        complete
+        reconceptualization of the relationships that sustain society. The deepening environmental crisis, driven by a
+        system
+        that condones the pillage of natural resources to satisfy an insatiable thirst for more, suggests how entirely
+        inadequate
+        is the present conception of humanity's relationship with nature &hellip; The principle of the oneness of
+        humankind
         implies, then, an organic change in the very structure of society.
     </dd>
     <dd>
-        <a href="http://bahai-library.com/uhj_ridvan_2013" target="_blank">Ridv&aacute;n Letter to the Bah&aacute;&#39;&iacute;s
-            of the World</a> - again from &para;6:<br><br> Through participation in the educational process promoted by the
+        <a href="https://bahai-library.com/uhj_ridvan_2013" target="_blank">Ridv&aacute;n Letter to the
+            Bah&aacute;&#39;&iacute;s
+            of the World</a> - again from &para;6:<br><br> Through participation in the educational process promoted by
+        the
         training institute, they are motivated to reject the torpor and indifference inculcated by the forces of society
-        and pursue, instead, patterns of action which prove life altering. Where this approach has advanced for some years
-        in a neighbourhood or village and the friends have sustained their focus, remarkable results are becoming gradually
-        but unmistakably evident. &hellip; A sense of duty towards one’s immediate community and physical environment becomes
+        and pursue, instead, patterns of action which prove life altering. Where this approach has advanced for some
+        years
+        in a neighbourhood or village and the friends have sustained their focus, remarkable results are becoming
+        gradually
+        but unmistakably evident. &hellip; A sense of duty towards one&apos;s immediate community and physical environment
+        becomes
         prevalent.
     </dd>
     <dt>
         Bah&aacute;&#39;&iacute; International Community
     </dt>
-    <dd><a href="http://bic.org/statements-and-reports/bic-statements/rethink-prosperity-alternatives-culture-consumer target="
-            _blank "">Rethinking Prosperity: Forging Alternatives to a Culture of Consumerism</a> (2010)</dd>
-    <dd><a href="http://iefworld.org/bicccap.html" target="_blank">Seven Year Plan of Action on Climate Change</a> (2009)</dd>
-    <dd><a href="http://www.bic.org/statements/seizing-opportunity-redefining-challenge-climate-change" target="_blank">Seizing
+    <dd><a href="https://bic.org/statements-and-reports/bic-statements/rethink-prosperity-alternatives-culture-consumer"
+            target="_blank">Rethinking Prosperity: Forging Alternatives to a Culture of Consumerism</a> (2010)</dd>
+    <dd><a href="https://iefworld.org/bicccap.html" target="_blank">Seven Year Plan of Action on Climate Change</a>
+        (2009)</dd>
+    <dd><a href="https://www.bic.org/statements/seizing-opportunity-redefining-challenge-climate-change"
+            target="_blank">Seizing
             the Opportunity: Redefining the Challenge of Climate Change</a> (2008) (PDF)</dd>
-    <dd><a href="http://bahai-library.org/published.uhj/statement.nature.bic.html" target="_blank">The Bah&aacute;&#39;&iacute;
+    <dd><a href="https://www.bahai.org/documents/bic-opi/bahai-statement-nature" target="_blank">The
+            Bah&aacute;&#39;&iacute;
             Statement on Nature</a> (1987)</dd>
-    <dd><a href="http://www.bic.org/social-and-sustainable-development" target="_blank">More documents on social and sustainable
+    <dd><a href="https://www.bic.org/focus-areas/development" target="_blank">More documents on social and
+            sustainable
             development
         </a></dd>
     <dt>
         National Spiritual Assembly of the Bah&aacute;&#39;&iacute;s of the United States
     </dt>
-    <dd><a href="http://publicaffairs.bahai.us/what-we-do/sustainable-development/faqs/" target="_blank">FAQ: Why act on
-            climate change now?</a> (2010)</dd>
+    <dd><a href="https://www.bahai.us/public-affairs/focus-areas/environment/" target="_blank">The natural world is a
+            divine trust of which we all must act as stewards.</a></dd>
 </dl>
 <h2>Other Websites and Articles of Interest</h2>
 <ul>
-    <li><a href="http://iefworld.org/" target="_blank">International Environment Forum</a></li>
-    <li><a href="http://bahaiblog.net/site/2013/06/03/going-green-and-going-to-war/" target="_blank">Op Ed: Going Green and
-            Going to War</a> (2013)</li>
-    <li><a href="http://www.safnet.com/archives/2013/04/bah-devotional-program-on-humanitys-relationship-with-nature.html"
+    <li><a href="https://iefworld.org/" target="_blank">International Environment Forum</a></li>
+    <li><a href="https://www.bahaiblog.net/articles/bahai-life/going-green-and-going-to-war/" target="_blank">Op Ed:
+            Going Green
+            and Going to War</a> (2013)</li>
+    <li><a href="https://blog.safnet.com/archive/2013/04/10/bah_devotional_program_on_humanitys_relationship_with_nature/"
             target="_blank">Bah&aacute;&#39;&iacute; Devotional Program on Humanity's Relationship with Nature</a></li>
 </ul>
